update onnxruntime to 1.16.1

--- a/K2TransducerAsr/K2TransducerAsr.csproj
+++ b/K2TransducerAsr/K2TransducerAsr.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+			<LangVersion>10</LangVersion>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -14,7 +15,7 @@
   <ItemGroup>
     <PackageReference Include="KaldiNativeFbankSharp" Version="1.0.8" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.15.1" />
+    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.16.1" />
   </ItemGroup>
 
 </Project>
