--- a/K2TransducerAsr/K2TransducerAsr.csproj
+++ b/K2TransducerAsr/K2TransducerAsr.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
 			<LangVersion>10</LangVersion>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -13,9 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="KaldiNativeFbankSharp" Version="1.0.8" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.16.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SpeechFeatures\SpeechFeatures.csproj" />
   </ItemGroup>
 
 </Project>
