--- a/K2TransducerAsr/K2TransducerAsr.csproj
+++ b/K2TransducerAsr/K2TransducerAsr.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="KaldiNativeFbankSharp" Version="1.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.16.1" />
   </ItemGroup>
