--- a/K2TransducerAsr/K2TransducerAsr.csproj
+++ b/K2TransducerAsr/K2TransducerAsr.csproj
@@ -13,13 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="KaldiNativeFbankSharp" Version="1.1.3" />
+    <PackageReference Include="ManySpeech.SpeechFeatures" Version="1.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.16.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SpeechFeatures\SpeechFeatures.csproj" />
   </ItemGroup>
 
 </Project>
