--- a/K2TransducerAsr.Examples/K2TransducerAsr.Examples.csproj
+++ b/K2TransducerAsr.Examples/K2TransducerAsr.Examples.csproj
@@ -1,90 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0-windows10.0.22621.0</TargetFramework>
+    <TargetFrameworks>net8.0;</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
+			<LangVersion>10</LangVersion>
     <Nullable>enable</Nullable>
+    <PublishAot>True</PublishAot>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NAudio" Version="2.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\K2TransducerAsr\K2TransducerAsr.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20\decoder-epoch-99-avg-1.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20\encoder-epoch-99-avg-1.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20\joiner-epoch-99-avg-1.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20\test_wavs\0.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20\test_wavs\1.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20\test_wavs\2.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20\test_wavs\3.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-bilingual-zh-en-2023-02-20\tokens.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-en-2023-02-21\decoder-epoch-99-avg-1.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-en-2023-02-21\encoder-epoch-99-avg-1.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-en-2023-02-21\joiner-epoch-99-avg-1.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-en-2023-02-21\test_wavs\0.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-en-2023-02-21\test_wavs\1.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-en-2023-02-21\test_wavs\2.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-streaming-zipformer-en-2023-02-21\tokens.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-zipformer-small-en-2023-06-26\decoder-epoch-99-avg-1.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-zipformer-small-en-2023-06-26\encoder-epoch-99-avg-1.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-zipformer-small-en-2023-06-26\joiner-epoch-99-avg-1.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-zipformer-small-en-2023-06-26\test_wavs\0.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-zipformer-small-en-2023-06-26\test_wavs\1.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-zipformer-small-en-2023-06-26\test_wavs\2.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-zipformer-small-en-2023-06-26\test_wavs\3.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="sherpa-onnx-zipformer-small-en-2023-06-26\tokens.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <PackageReference Include="ManySpeech.K2TransducerAsr" Version="1.0.5" />
+    <PackageReference Include="NAudio" Version="2.2.1" />
   </ItemGroup>
 
 </Project>
